# beerust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  macros.rs  main.rs  router.rs
src/req/: mod.rs  solution.rs
src/resp/: judge_result.rs  judge_state.rs  judge_submit.rs  mod.rs  simple_test.rs  some_exception.rs  test_code.rs
src/service/: judge_result.rs  judge_state.rs  judge_submit.rs  mod.rs  simple_test.rs  test_code.rs
