[package]
name = "beerust"
version = "0.1.0"
authors = ["Six Edge <sixedge111@gmail.com>"]
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["rust", "rocket", "server", "online judge"]

[[bin]]
name = "beerust"
path = "src/main.rs"

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
#chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0"
num_cpus = "1"

[package.metadata.docs.rs]
all-features = true